# polarsteps-tts

./: .gitignore  README.md  pyproject.toml
scripts/: serve-voxtral.sh
src/polarsteps_tts/application/use_cases/: __init__.py  fetch_trip.py  prepare_narration.py  synthesize_step.py
src/polarsteps_tts/domain/entities/: __init__.py  audio_segment.py  language.py  location.py  narration_script.py  step.py  trip.py  voice.py
src/polarsteps_tts/domain/exceptions/: __init__.py
src/polarsteps_tts/domain/ports/: __init__.py  audio_segment_cache.py  text_to_speech_engine.py  trip_payload_cache.py  trip_repository.py
src/polarsteps_tts/domain/services/: __init__.py  audio_estimator.py  freshness_policy.py  intro_generator.py  text_chunker.py  text_cleaner.py
src/polarsteps_tts/domain/value_objects/: __init__.py  slug.py  synthesis_options.py  trip_id.py
src/polarsteps_tts/infrastructure/cache/: __init__.py  json_file_cache.py  wav_file_audio_segment_cache.py
src/polarsteps_tts/infrastructure/polarsteps/: __init__.py  api_repository.py  cached_repository.py  http_client.py  payload_parser.py  url_parser.py
src/polarsteps_tts/infrastructure/storage/: __init__.py  atomic_write.py
tests/e2e/: test_fetch_command.py  test_synthesize_step_command.py  test_synthesize_trip_command.py
tests/unit/application/: test_fetch_trip.py  test_prepare_narration.py  test_synthesize_step.py
tests/unit/domain/: test_audio_estimator.py  test_audio_segment.py  test_freshness_policy.py  test_intro_generator.py  test_narration_script.py  test_slug.py  test_text_chunker.py  test_text_cleaner.py  test_trip.py  test_trip_id.py  test_voice.py
tests/unit/infrastructure/: test_atomic_write.py  test_cached_trip_repository.py  test_caching_tts_engine.py  test_json_file_cache.py  test_payload_parser.py  test_polarsteps_api_repository.py  test_url_parser.py  test_voxtral_engine.py  test_voxtral_http_client.py  test_wav_file_audio_segment_cache.py
tests/unit/presentation/: test_synthesize_step_handler.py
(+9 files in other folders)
